# krabby-research

./: .coveragerc  .dockerignore  .gitignore  HANDOFF_HID_NINTENDO.md  HANDOFF_MOTOR_FAILURE_2026-05-26.md  Makefile  README.md  pytest.ini
.github/workflows/: publish-firmware.yml  publish-locomotion.yml  publish-packages.yml
assets/: Krabby-Uno-USD-pipeline.md  Krabby-Uno.blend  crab_hex.usd  crab_hex.usda  crab_hex_ref.urdf  crab_hex_ref.usd  crab_simple.usda
assets/scripts/: README.md  simple_walk.py  squat.py
assets/udf/: crab_hex.usd
bench/: README.md  pyproject.toml
bench/krabby_bench/: __init__.py  __main__.py  _alert.py  _config.py  _ecr.py  _install.py  _smoke.py  _state.py  watchdog.py
bench/systemd/: krabby-bench.service  krabby-bench.timer
compute/parkour/: benchmark_inference.py  inference_client.py  model_definition.py  parkour_types.py  policy_interface.py  pyproject.toml  test_checkpoint_loading.py
compute/parkour/mappers/: hardware_to_model.py  model_to_hardware.py
compute/parkour/modules/: actor_critic_with_encoder.py  on_policy_runner_with_extractor.py  ppo_with_extractor.py
compute/parkour/utils/: __init__.py  math.py
compute/testing/: inference_test_runner.py  main.py  mock_hal_server.py
controller/: __init__.py  control_loop.py  pyproject.toml  requirements.txt  robot_definition_quad.py
controller/cli/: README.md  __init__.py  cli_uno.py  cli_uno_sim.py
controller/input/: __init__.py  __main__.py  input_controller.py  state.py  webrtc_input_controller.py
controller/input/pygametemp/: __init__.py  __main__.py  input_controller_test_pygame.py
controller/mappers/: __init__.py  gamepad_to_isaacsim_hal_mapper.py  gamepad_to_krabby_hal_mapper.py
controller/scripts/demo/: README.md  isaacsim_demo_runbook.md  isaacsim_mcusdk_demo.md  test_gamepad_to_isaacsim_hal.py  test_mapper_sdk_logging.py
controller/scripts/isaac/: isaacsim_demo_runbook.md  isaacsim_mcusdk_demo.md  test_gamepad_to_isaacsim_hal.py
controller/scripts/jetson/: CONNECT_PRO_CONTROLLER.md  E2E_GAMEPAD_KRABBY.md  main_gamepad_only.py  run_gamepad_to_krabby_client.py
controller/scripts/jetson/helper/: install_telemetry_service.sh  run_gamepad_client_in_container.sh  run_gamepad_hal_server_only_in_container.sh  run_server_and_client_in_container.sh  start_gamepad_hal_and_client_detached.sh  start_gamepad_hal_server_container_detached.sh  start_telemetry_websocket.sh  stop_gamepad_hal_container.sh  uninstall_telemetry_service.sh
data_collection/: README.md  __init__.py  collector.py  collector_settings.py  config.py  pyproject.toml  rotating_bag.py  serialization.py
data_collection/config/: collector.yaml
docs/: DATA_COLLECTOR.md  DOCKER_DEPENDENCIES.md  FOLDER_LAYOUT.md  HAL_GUIDE.md  JETSON_DEPLOYMENT.md  PUBLISHING.md  RUNTIME_ARCHITECTURE.md  SENSOR_INTERFACE.md  TECHNOLOGY_AND_TERMINOLOGY.md  TELEOP.md  crab-hexapod-policy-config.md  m14-bringup-report.md
firmware/: CALIBRATION.md  MANIFEST.in  MOTOR_HEADER_PINOUT.md  Makefile  SETUP.md  __init__.py  __main__.py  calibration_wizard.py  cli.py  install.py  krabby_mcu.py  manifest.py  mcu_port.py  pyproject.toml
firmware/Task2_SixAxis/: SETUP.md  calibration_wizard.py  krabby_mcu_six_axis.py
firmware/Task2_SixAxis/Six_Axis_Controller/: Six_Axis_Controller.ino  actuator_manager.h  command.h
firmware/Task2_SixAxis/interfaces/: joint_telemetry.py
firmware/arduino/: actuator_manager.h  arduino.ino  board_pins.h  command.h  controller.ino  hall_hw.cpp  hall_hw.h  joint_telemetry.h  version.h
firmware/arduino/interfaces/: joint_telemetry.py
firmware/gui/: __main__.py  app.py
firmware/interfaces/: __init__.py  joint_telemetry.py
firmware/scripts/: detect_mcu_port.py  gen_version_h.py  publish_firmware.py
hal/: __init__.py
hal/client/: client.py  config.py  pyproject.toml
hal/client/data_structures/: __init__.py  hardware.py
hal/client/observation/: types.py
hal/server/: config.py  gstreamer_runtime.py  pyproject.toml  robot_definition.py  robot_definition_unitree_go2.py  sensor_interface.py  server.py  streaming_map.py  teleop_portal_signaling.py
hal/server/isaac/: README.md  __init__.py  hal_server.py  isaacsim_mcusdk.py  main.py  pyproject.toml  robot_definition_krabby_quad.py  robot_definition_unitree_go2.py  sensor_backend_isaac.py  sim_rgbd_camera_cfgs.py  zed_like_scene_cfg.py
hal/server/jetson/: README.md  __init__.py  camera.py  depth_scan_features.py  front_camera_factory.py  hal_server.py  krabby_mcusdk.py  main.py  main_gamepad_only.py  maixsense_a075v.py  maixsense_rgb_depth_camera.py  pyproject.toml  rgb_depth_camera.py  robot_definition_krabby_hex.py  sensor_backend_jetson.py  telemetry_websocket.py  teleop_integration.py  test_maixsense_a075v.py  zed_camera.py
hal/tools/: hal_dump.py  multi_stream_display.py  pyproject.toml
hardware/: ProPrj_KrabbyUno - v0.1_2026-05-19.epro  ProPrj_KrabbyUno - v0.2_2026-05-19.epro
hardware/Uno-v0.2/: hardware-diagram.md  motor-sourcing-summary.md
hardware/diagrams/: BOM.md  BOM.xlsx
images/isaacsim/: Dockerfile  README.md  requirements.txt  test_runner.py
images/locomotion/: Dockerfile  README.md  (+3 more)
krabby/: .gitignore  README.md  __init__.py  __main__.py  _docker.py  _host.py  _state.py  firmware.py  install.py  pyproject.toml  run.py  uno.py  update.py
scripts/: demo_isaacsim_teacher.sh  jetson-reset.sh  pair_pro_controller.sh  playback_krabby_bag.py  run_isaac_front_camera_capture.py  run_isaac_hal_server.sh  run_jetson_hal_server_host.sh  run_teleop_portal_x86_docker.sh  teleop_smoke.py  test-publish-job.sh
teleop/: README.md
teleop/edge/: README.md  __init__.py  config.py  depth_preview.py  hal_rgb_track.py  portal_client.py  pyproject.toml  robot_settings.py  rtc_session.py  sdp_util.py  signaling_session.py  viewer_catalog.py  webrtc_input_controller.py
teleop/portal/: README.md  __init__.py  app_keys.py  auth.py  client_config.py  ice_config.py  main.py  pyproject.toml  relay.py  settings.py
teleop/portal/static/: portal_viewer.html  teleop_session.js
tests/: helpers.py  test_hardware_serialization.py
(+142 files in other folders)
