[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krabby-bench"
version = "0.1.1"
description = "Bench watchdog: polls ECR, runs smoke tests, and alerts on failure"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "James Childers", email = "james.childers@gmail.com"}
]
dependencies = [
    "requests>=2.31.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
krabby-bench = "krabby_bench.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["krabby_bench*"]
