[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krabby-firmware"
version = "0.2.13"
description = "Python SDK for Krabby MCU (e.g. Arduino) communication"
readme = "SETUP.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyserial>=3.5",
]

[project.scripts]
krabby-firmware = "firmware.__main__:main"

[tool.setuptools]
package-dir = {"firmware" = ".", "firmware.interfaces" = "interfaces"}
packages = ["firmware", "firmware.interfaces"]
