[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krabby-compute-parkour"
version = "0.1.0"
description = "Parkour policy inference client and utilities for Krabby"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "krabby-hal-client>=0.1.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "rsl-rl-lib>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
package-dir = {"compute" = ".."}
packages = ["compute.parkour", "compute.parkour.mappers", "compute.parkour.modules", "compute.parkour.modules.feature_extractors", "compute.parkour.utils", "compute.testing"]

[tool.setuptools.package-data]
"compute.parkour" = ["py.typed"]
