[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krabby-hal-tools"
version = "0.1.0"
description = "Debugging and inspection tools for HAL (Hardware Abstraction Layer)"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]

dependencies = [
    "krabby-hal-client>=0.1.0",
    "krabby-hal-server>=0.1.0",
    "pyzmq>=25.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
# For multi_stream_display live OpenCV window: pip install krabby-hal-tools[display]
display = [
    "opencv-python>=4.8.0",
]

[project.scripts]
hal-dump = "hal.tools.hal_dump:main"
multi-stream-display = "hal.tools.multi_stream_display:main"

[tool.setuptools]
package-dir = {"hal" = ".."}
packages = ["hal.tools"]

