[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krabby-hal-server-isaac"
version = "0.1.0"
description = "HAL server implementation for IsaacSim with integrated inference"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "krabby-hal-server>=0.1.0",
    "krabby-hal-client>=0.1.0",
    "krabby-compute-parkour>=0.1.0",
    "krabby-data-collection>=0.1.0",
    "krabby-controller>=0.1.0",
    "krabby-teleop-edge>=0.1.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
krabby-hal-server-isaac = "hal.server.isaac.main:main"

[tool.setuptools]
package-dir = {"hal" = "../.."}
packages = ["hal.server.isaac"]

