[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krabby-hal-server-jetson"
version = "0.1.0"
description = "HAL server implementation for Jetson with integrated inference"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "krabby-firmware>=0.1.0",
    "krabby-hal-server>=0.1.0",
    "krabby-hal-client>=0.1.0",
    "krabby-compute-parkour>=0.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
maixsense = [
    "requests>=2.28.0",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
krabby-hal-server-jetson = "hal.server.jetson.main:main"

[tool.setuptools]
package-dir = {"hal" = "../.."}
packages = ["hal.server.jetson"]

